cmake_minimum_required(VERSION 3.24)
project(algorithm_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm_cpp main.cpp baekjoon/b11/main.cpp baekjoon/b11/main.h baekjoon/b11/main.cpp baekjoon/b1157/main.cpp b14502/main.cpp baekjoon/b1541/main.cpp algorithm-jobs/chapter01-1/cocacola.cpp algorithm-jobs/chapter01-1/findmax.cpp algorithm-jobs/chapter01-2/getmoney.cpp algorithm-jobs/chapter01-2/main.cpp algorithm-jobs/chapter01-1/evennumber.cpp algorithm-jobs/chapter01-1/yootnole.cpp algorithm-jobs/chapter01-2/primenumber.cpp algorithm-jobs/chapter01-2/divisor.cpp algorithm-jobs/chapter01-2/dice.cpp baaarkingdog/basic1.cpp)

add_executable(Out main.cpp baekjoon/b11/main.cpp baekjoon/b11/main.h baekjoon/b11/main.cpp baekjoon/b1157/main.cpp b14502/main.cpp)